change the content

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <video width="320" height="240" controls>
+    <video width="600" autoplay loop muted>
  <source src="mp4/typing-numbers.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
 </video><!-- Wrapper -->
     <div>
       <!-- Header -->
-      <header></header>
+      <header>
+        <h1>!!!TOUCH ME AND YOU WOULD STUK FOREVER!!!</h1>
+        <h2> WHAT ARE YOU?</h2>
+      </header>
 
       <!-- Nav -->
       <nav id="nav">
