add images and svg

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ fill="yellow" />
                 Lorem ipsum dolor sit amet
               </p>
               <svg viewBox="0 0 12.72 12.8" xmlns="http://www.w3.org/2000/svg"><path d="m4.56 12.16a2.22 2.22 0 0 0 1.44.64c2.16 0 2.64-1.6 2.72-2.88.16-1.84.64-1.76.88-1.76.56 0 .72.32.72.88a1.65 1.65 0 0 0 -.8 1.36 1.6 1.6 0 1 0 1.6-1.6h-.12a1.55 1.55 0 0 0 -1.48-1.44c-1.28 0-1.6 1.12-1.68 2.32-.08 1.68-.64 2.32-1.84 2.32a1.23 1.23 0 0 1 -.8-.32 3 3 0 0 1 -.4-1.84c1.6 0 3.2-1.44 3.76-3.84l-.16-.08a12.94 12.94 0 0 0 .4-2.92 2.44 2.44 0 0 0 -.8-2 2.62 2.62 0 0 0 -1.68-.6.84.84 0 0 0 -.72-.4.8.8 0 0 0 -.8.8.76.76 0 0 0 .8.8.63.63 0 0 0 .64-.4 1.92 1.92 0 0 1 1.2.48 1.55 1.55 0 0 1 .56 1.32 13.88 13.88 0 0 1 -.4 2.8l-.16-.04c-.24.88-1 2.88-2.64 2.88h-.8c-1.6 0-2.4-2-2.64-2.88l-.16.08a13.87 13.87 0 0 1 -.4-2.84 1.55 1.55 0 0 1 .56-1.36 2.27 2.27 0 0 1 1.2-.48.63.63 0 0 0 .64.4.76.76 0 0 0 .8-.76.76.76 0 0 0 -.8-.8.84.84 0 0 0 -.72.4 2.61 2.61 0 0 0 -1.68.6 2.43 2.43 0 0 0 -.8 2 14.54 14.54 0 0 0 .4 3l-.16.08c.56 2.32 2.16 3.76 3.76 3.76 0 0-.08 1.76.56 2.32zm6.64-1a.8.8 0 1 1 .8-.8.8.8 0 0 1 -.8.8zm0 0"></path></svg>
-              <p>this is great!</p>
+              <p>this is great</p>
           </div>
           <ul>
             <li></li>
