--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <video width="600" autoplay loop muted>
- <source src="mp4/Sand-Slow-Walk.mp4" type="video/mp4">
- <source src="movie.ogg" type="video/ogg">
+ <source src="MP4/Sand-Slow-Walk.mp4" type="video/mp4">
+ 
  Your browser does not support the video tag.
 </video>
   <!-- Wrapper -->
