--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <center>
     <video width="600" autoplay loop muted>
  <source src="MP4/Sand-Slow-Walk.mp4" type="video/mp4">
- 
- Your browser does not support the video tag.
 </video>
+
   <!-- Wrapper -->
     <div>
+
       <!-- Header -->
       <header>
-        <h1>!!!TOUCH ME <br> AND YOU WOULD STUK FOREVER!!!</h1>
+        <h1>!!!TOUCH ME <br> AND YOU WOULD STUK FOREVER!!!</br></h1>
         <h2> WHAT ARE YOU?</h2>
-
 <svg width="100" height="100">
  <circle cx="50" cy="50" r="40"
 stroke="green" stroke-width="4"
@@ -36,8 +36,10 @@ fill="yellow" />
 
       <!-- Main -->
       <div>
+
         <!-- Introduction -->
         <section>
+          <h1>The coolest imagination</h1>
           <div>
             <h1>lorem ipsum</h1>
             <p>
@@ -49,7 +51,7 @@ fill="yellow" />
             </button>
           </div>
           <figure>
-            <img src="images/beach.jpeg" />
+            <img src="https://via.placeholder.com/500x500" />
           </figure>
         </section>
 
@@ -57,7 +59,7 @@ fill="yellow" />
         <section>
           <h1>The best place to be</h1>
           <div>
-            <svg id="areas-of-specialty" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237.6 237.6">
+            <svg width="500" height="500" id="areas-of-specialty" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237.6 237.6">
 <path d="M137.68,157.31H126.85V146.49a8.05,8.05,0,0,0-16.11,0v10.82H99.92a8.05,8.05,0,1,0,0,16.11h10.82v10.82a8.05,8.05,0,1,0,16.11,0V173.42h10.82a8.05,8.05,0,0,0,0-16.11h0Zm0,0"></path>
 <path d="M201.58,41.53H182.23V30a30,30,0,0,0-30-30H85.38a30,30,0,0,0-30,30V41.53H36a36.06,36.06,0,0,0-36,36V202.7a34.94,34.94,0,0,0,34.9,34.9H202.7a35,35,0,0,0,34.9-34.9V77.55a36.06,36.06,0,0,0-36-36h0ZM71.48,30a13.92,13.92,0,0,1,13.9-13.9h66.84A13.92,13.92,0,0,1,166.12,30V41.53H71.48V30ZM36,57.64H201.58a19.94,19.94,0,0,1,19.91,19.91v5.51H16.11V77.55A19.94,19.94,0,0,1,36,57.64h0ZM168.38,99.17H180v11.58H168.38V99.17Zm-110.75,0H69.21v11.58H57.64V99.17ZM221.49,202.7a18.82,18.82,0,0,1-18.79,18.79H34.9A18.82,18.82,0,0,1,16.11,202.7V99.17H41.53V118.8a8.06,8.06,0,0,0,8.05,8.05H77.27a8.06,8.06,0,0,0,8.05-8.05V99.17h67V118.8a8.06,8.06,0,0,0,8.06,8.05H188a8.06,8.06,0,0,0,8.05-8.05V99.17h25.42V202.7Zm0,0"></path>
 </svg>
@@ -65,8 +67,12 @@ fill="yellow" />
                 Lorem ipsum dolor sit amet
                 Lorem ipsum dolor sit amet
               </p>
-              <svg viewBox="0 0 12.72 12.8" xmlns="http://www.w3.org/2000/svg"><path d="m4.56 12.16a2.22 2.22 0 0 0 1.44.64c2.16 0 2.64-1.6 2.72-2.88.16-1.84.64-1.76.88-1.76.56 0 .72.32.72.88a1.65 1.65 0 0 0 -.8 1.36 1.6 1.6 0 1 0 1.6-1.6h-.12a1.55 1.55 0 0 0 -1.48-1.44c-1.28 0-1.6 1.12-1.68 2.32-.08 1.68-.64 2.32-1.84 2.32a1.23 1.23 0 0 1 -.8-.32 3 3 0 0 1 -.4-1.84c1.6 0 3.2-1.44 3.76-3.84l-.16-.08a12.94 12.94 0 0 0 .4-2.92 2.44 2.44 0 0 0 -.8-2 2.62 2.62 0 0 0 -1.68-.6.84.84 0 0 0 -.72-.4.8.8 0 0 0 -.8.8.76.76 0 0 0 .8.8.63.63 0 0 0 .64-.4 1.92 1.92 0 0 1 1.2.48 1.55 1.55 0 0 1 .56 1.32 13.88 13.88 0 0 1 -.4 2.8l-.16-.04c-.24.88-1 2.88-2.64 2.88h-.8c-1.6 0-2.4-2-2.64-2.88l-.16.08a13.87 13.87 0 0 1 -.4-2.84 1.55 1.55 0 0 1 .56-1.36 2.27 2.27 0 0 1 1.2-.48.63.63 0 0 0 .64.4.76.76 0 0 0 .8-.76.76.76 0 0 0 -.8-.8.84.84 0 0 0 -.72.4 2.61 2.61 0 0 0 -1.68.6 2.43 2.43 0 0 0 -.8 2 14.54 14.54 0 0 0 .4 3l-.16.08c.56 2.32 2.16 3.76 3.76 3.76 0 0-.08 1.76.56 2.32zm6.64-1a.8.8 0 1 1 .8-.8.8.8 0 0 1 -.8.8zm0 0"></path></svg>
+              <svg width="500" height="500" viewBox="0 0 12.72 12.8" xmlns="http://www.w3.org/2000/svg"><path d="m4.56 12.16a2.22 2.22 0 0 0 1.44.64c2.16 0 2.64-1.6 2.72-2.88.16-1.84.64-1.76.88-1.76.56 0 .72.32.72.88a1.65 1.65 0 0 0 -.8 1.36 1.6 1.6 0 1 0 1.6-1.6h-.12a1.55 1.55 0 0 0 -1.48-1.44c-1.28 0-1.6 1.12-1.68 2.32-.08 1.68-.64 2.32-1.84 2.32a1.23 1.23 0 0 1 -.8-.32 3 3 0 0 1 -.4-1.84c1.6 0 3.2-1.44 3.76-3.84l-.16-.08a12.94 12.94 0 0 0 .4-2.92 2.44 2.44 0 0 0 -.8-2 2.62 2.62 0 0 0 -1.68-.6.84.84 0 0 0 -.72-.4.8.8 0 0 0 -.8.8.76.76 0 0 0 .8.8.63.63 0 0 0 .64-.4 1.92 1.92 0 0 1 1.2.48 1.55 1.55 0 0 1 .56 1.32 13.88 13.88 0 0 1 -.4 2.8l-.16-.04c-.24.88-1 2.88-2.64 2.88h-.8c-1.6 0-2.4-2-2.64-2.88l-.16.08a13.87 13.87 0 0 1 -.4-2.84 1.55 1.55 0 0 1 .56-1.36 2.27 2.27 0 0 1 1.2-.48.63.63 0 0 0 .64.4.76.76 0 0 0 .8-.76.76.76 0 0 0 -.8-.8.84.84 0 0 0 -.72.4 2.61 2.61 0 0 0 -1.68.6 2.43 2.43 0 0 0 -.8 2 14.54 14.54 0 0 0 .4 3l-.16.08c.56 2.32 2.16 3.76 3.76 3.76 0 0-.08 1.76.56 2.32zm6.64-1a.8.8 0 1 1 .8-.8.8.8 0 0 1 -.8.8zm0 0"></path></svg>
               <p>this is great</p>
+               <svg width="500" height="500" id="areas-of-specialty" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237.6 237.6">
+<path d="M137.68,157.31H126.85V146.49a8.05,8.05,0,0,0-16.11,0v10.82H99.92a8.05,8.05,0,1,0,0,16.11h10.82v10.82a8.05,8.05,0,1,0,16.11,0V173.42h10.82a8.05,8.05,0,0,0,0-16.11h0Zm0,0"></path>
+<path d="M201.58,41.53H182.23V30a30,30,0,0,0-30-30H85.38a30,30,0,0,0-30,30V41.53H36a36.06,36.06,0,0,0-36,36V202.7a34.94,34.94,0,0,0,34.9,34.9H202.7a35,35,0,0,0,34.9-34.9V77.55a36.06,36.06,0,0,0-36-36h0ZM71.48,30a13.92,13.92,0,0,1,13.9-13.9h66.84A13.92,13.92,0,0,1,166.12,30V41.53H71.48V30ZM36,57.64H201.58a19.94,19.94,0,0,1,19.91,19.91v5.51H16.11V77.55A19.94,19.94,0,0,1,36,57.64h0ZM168.38,99.17H180v11.58H168.38V99.17Zm-110.75,0H69.21v11.58H57.64V99.17ZM221.49,202.7a18.82,18.82,0,0,1-18.79,18.79H34.9A18.82,18.82,0,0,1,16.11,202.7V99.17H41.53V118.8a8.06,8.06,0,0,0,8.05,8.05H77.27a8.06,8.06,0,0,0,8.05-8.05V99.17h67V118.8a8.06,8.06,0,0,0,8.06,8.05H188a8.06,8.06,0,0,0,8.05-8.05V99.17h25.42V202.7Zm0,0"></path>
+</svg>
           </div>
           <ul>
             <li></li>
@@ -81,14 +87,70 @@ fill="yellow" />
         </section>
 
         <!-- Second Section -->
-        <section></section>
+        <section>
+          <h1>The OUUUURRRAHHH</h1>
+          <div>
+            <img src="https://via.placeholder.com/800x450">
+          </div>
+        </section>
 
         <!-- Third Section -->
-        <section></section>
-      </div>
+        <section>
+          <h1>Yes this is what I want
+          </h1>
+          <article>
+            <p>
+              The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very useful when the focus is meant to be on design, not content.</p>
+          </article>
+          <article>
+             <p>
+              The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very useful when the focus is meant to be on design, not content.</p>
+</article>
+          <div>
+            <a href="read.html">read</a>
+          </div>
+        </section>
+
+      <!--fourth section-->
+      <section>
+        <h1>Checkout the Prices Now</h1>
+        <figure>
+        <a href="prices.html" title="go to prices page"><img src="https://via.placeholder.com/400x400" alt="placeholder" /></a>
+      
+  <figcaption>Figure A - Computer Hope guy.</figcaption>
+  </figure>
+  <div>
+    <button>
+      <a href="readmore.html">read more</a>
+    </button>
+    <button>
+      <a href="readmore.html">read more</a>
+    </button>
+  </div>
+  </section>
 
       <!-- Footer -->
-      <footer></footer>
+      <footer>
+        <ul>
+          <li>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic 
+              for previewing layouts and visual mockups.</p>
+          </li>
+          <li>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic
+              for previewing layouts and visual mockups.</p> 
+            <ul>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+          <li>Youtube</li>
+        </ul>
+          </li>
+        </ul>
+       
+      </footer>
     </div>
 
     <!-- Scripts -->
